# TelegramBuddy

./: .gitignore  README.md  config.example.yaml  inspect_memory.py  main.py  pyproject.toml
scripts/: inspect_cache.py  inspect_memory.py
src/: character.py  config.py  llm.py  memory.py  message_cache.py  stt.py  tts.py  utils.py
