[project]
name = "TelegramBuddy"
version = "0.1.0"
description = "A Telegram bot that acts like your buddy in a group"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.17.0",
    "aiofiles>=24.0",
    "mempalace>=3.0.0",
    "omnivoice>=0.1.3",
    "pydantic-ai>=1.78.0",
    "pydantic-settings[yaml]>=2.13.0",
    "torchaudio>=2.6.0",
]
